--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <link rel="shortcut icon" href="./assets/imgs/favicon.ico">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=0.5,maximum-scale=1.0,minimum-scale=0.5,user-scalable=yes">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <!-- <link href="./css/style.css" rel="stylesheet" type="text/css"></link> -->
+        <link href="./css/style.css" rel="stylesheet" type="text/css"></link>
         
         <!-- preload jsPsych since this likes to be first -->
         <!-- <script src="./js/jspsych-7.2.1/jspsych.js"></script>
@@ -16,21 +18,12 @@
         <link rel="stylesheet" href="https://unpkg.com/@jspsych/plugin-survey@0.1.1/css/survey.css"> -->
 
         <style>
-            html,
-            body,
-            /* #consent-container {
-              font-family: 'Open Sans', 'Arial', sans-serif;
-              font-size: 14px;
-              line-height: 1.6em;
-            }
-            #consent-container h2 {
-              text-align: center;
-              line-height: 1.6em;
-            } */
+            html{font-size:62.5%;}
+            body {font:normal 100% Arial,sans-serif;font-size:14px; font-size:1.4rem; } 
+
             #game-container {
               margin: 0;
               padding: 0;
-              width: auto;
               font: caption;
               font-weight: 500;
               min-width: 100vw;
@@ -47,21 +40,15 @@
     </head>
 
     <body>
-      <!-- set up divs to hold consent form and game content -->
-      <!-- <div id='consent-container' class="form">
-        <header id="header" class="form__header" ><h2 id="header_title" class="form__title"></h2></header>
-        <section><div id='consent'></div></section>
-      </div> -->
-      <div id='game-container'></div>
+      <div id='game-container'>
+      <div id='noconsent'></div>
+      <script src="https://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
       <!-- <div id='jspsych-target'></div> -->
-
       <!-- Project-specific libraries -->
       <!-- NB newer phaser3 versions are available but not compatible with this version of rexUI -->
       <!-- <script src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script> -->
       <script src="//cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
       <script src="./js/ui/rexuiplugin.min.js" type="text/javascript"></script>
-
-
       <script src="./js/av-min.js" type="text/javascript"></script>
       <script type="module">
             const { Query, User } = AV;
@@ -72,12 +59,11 @@
                     })
       </script>
       <!-- Main study components -->
-      <!-- <script src="./js/SupabaseAuth.js" type="module"></script>  set up task version info vars -->
       <script src="./js/versionInfo.js" type="module"></script>   <!-- set up task version info vars -->
-      <script src="./js/noconsent.js" type="module"></script>     <!-- get informed consent then -->
+      <script src="./js/noconsent.js" type="module"></script>
       <script src="./js/task.js" type="module"></script>          <!-- run task! -->
       <script src="./js/saveData.js" type="module"></script>      <!-- set up data saving functions -->
-
+      </div>
       <script nomodule>
         alert(
         "This browser doesn't support modules, so the study can't run. Please try the latest version of Chrome, Firefox or Safari!"
