--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
       <!-- <script src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script> -->
       <script src="//cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
       <script src="./js/ui/rexuiplugin.min.js" type="text/javascript"></script>
-      <script src="./js/av-min.js" type="text/javascript"></script>
+      <script src="./js/av.js" type="text/javascript"></script>
       <script type="module">
-            const { Query, User } = AV;
-            AV.init({
-                      appId: "7yk2g0IxApJ23zLC6w8hW2ml-gzGzoHsz",
-                      appKey: "O3GGJQvRi1vLugRNUMCN0JR0",
-                      serverURL: "https://7yk2g0ix.lc-cn-n1-shared.com",
-                    })
+        const { Query, User } = AV;
+        AV.init({
+                  appId: "7yk2g0IxApJ23zLC6w8hW2ml-gzGzoHsz",
+                  appKey: "O3GGJQvRi1vLugRNUMCN0JR0",
+                  serverURL: "https://7yk2g0ix.lc-cn-n1-shared.com",
+                })
       </script>
       <!-- Main study components -->
       <script src="./js/versionInfo.js" type="module"></script>   <!-- set up task version info vars -->
       <script src="./js/noconsent.js" type="module"></script>
       <script src="./js/task.js" type="module"></script>          <!-- run task! -->
-      <script src="./js/saveData.js" type="module"></script>      <!-- set up data saving functions -->
+
       </div>
       <script nomodule>
         alert(
