--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link href="./css/style.css" rel="stylesheet" type="text/css"></link>
-        
+        <link rel="stylesheet" href="https://unpkg.com/@jspsych/plugin-survey@0.1.1/css/survey.css"></link>
+
         <!-- preload jsPsych since this likes to be first -->
-        <!-- <script src="./js/jspsych-7.2.1/jspsych.js"></script>
+        <script src="./js/jspsych-7.2.1/jspsych.js"></script>
+        <script src="./js/jspsych-7.2.1/plugin-instructions.js"></script>
+        <script src="./js/jspsych-7.2.1/plugin-html-button-response-ca.js"></script>
         <script src="./js/jspsych-7.2.1/plugin-html-button-response.js"></script>
+        <script src="./js/jspsych-7.2.1/plugin-html-multi-slider-response.js"></script>
+        <script src="./js/jspsych-7.2.1/plugin-survey-multi-choice.js"></script>
         <script src="./js/jspsych-7.2.1/plugin-survey-likert.js"></script>
         <script src="./js/jspsych-7.2.1/plugin-survey.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/@jspsych/plugin-survey@0.1.1/css/survey.css"> -->
 
         <style>
-            html{font-size:62.5%;}
-            body {font:normal 100% Arial,sans-serif;font-size:14px; font-size:1.4rem; } 
-
+            html{ font-size:62.5%; }
+            body { font: normal 100% Arial,sans-serif; font-size: 14px; }
             #game-container {
               margin: 0;
               padding: 0;
@@ -40,15 +43,17 @@
 
     <body>
       <div id='game-container'>
-      <div id='noconsent'></div>
+      <div id='infoSheet'></div>
+      </div>
+      <div id='jspsych-target'></div>
+      
       <script src="https://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
-      <!-- <div id='jspsych-target'></div> -->
       <!-- Project-specific libraries -->
       <!-- NB newer phaser3 versions are available but not compatible with this version of rexUI -->
-      <!-- <script src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script> -->
       <script src="//cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
       <script src="./js/ui/rexuiplugin.min.js" type="text/javascript"></script>
       <script src="./js/av.js" type="text/javascript"></script>
+
       <script type="module">
         const { Query, User } = AV;
         AV.init({
@@ -57,15 +62,18 @@
                   serverURL: "https://7yk2g0ix.lc-cn-n1-shared.com",
                 })
       </script>
-      <!-- Main study components -->
+      <!-- goal-setting game -->
       <script src="./js/versionInfo.js" type="module"></script>   <!-- set up task version info vars -->
-      <script src="./js/noconsent.js" type="module"></script>
-      <script src="./js/task.js" type="module"></script>          <!-- run task! -->
+      <script src="./js/infoSheet.js" type="module"></script>
+      <!-- <script src="./js/task.js" type="module"></script>          run task! -->
+      <!-- Cognitive therapy -->
+      <script src="./js/versionInfo_cog.js" type="module"></script>  <!-- set up task version info vars -->
+      <script src="./js/trials.js" type="module"></script>       <!-- preload trial info -->
+      <!-- <script src="./js/constructStudy.js" type="module"></script>         run task! -->
 
-      </div>
       <script nomodule>
         alert(
-        "This browser doesn't support modules, so the study can't run. Please try the latest version of Chrome, Firefox or Safari!"
+        "该浏览器不支持，无法运行程序。请尝试最新版火狐，Safari浏览器！"
         );
       </script>
     </body>
