--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zh-CN">
     <head>
-        <title>神奇雨伞</title>
+        <title>游戏测验</title>
         <link rel="shortcut icon" href="./assets/imgs/favicon.ico">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=0.5,maximum-scale=1.0,minimum-scale=0.5,user-scalable=yes">
